Wed Nov 15 14:07:44 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * tests\DCPS\FooTest3_0\SimpleSubscriber.cpp:
        * tests\transport\udp_simple\SimplePublisher.cpp:
        * tests\transport\udp_simple\SimpleSubscriber.cpp:
        * tests\transport\udp_simple\SimpleDataWriter.cpp:
        * tests\transport\simple\SimplePublisher.cpp:
        * tests\transport\simple\SimpleSubscriber.cpp:
        * tests\transport\simple\SimpleDataWriter.cpp:

          Added missing includes to fix compilation errors on windows.
          
Wed Nov 15 15:47:31 GMT 2006  Rich Seibel<seibel_r@ociweb.com>

        * tests/DCPS/FooTest3/Writer.cpp:
        * tests/DCPS/FooTest3NoKey/Writer.cpp:
        * tests/DCPS/FooTest3_1/Writer.cpp:
        * tests/DCPS/FooTest3_2/Writer.cpp:
        * tests/DCPS/FooTest5/Writer.cpp:
        * tests/DCPS/MultiDPTest/Writer.cpp:
        * tests/DCPS/MultiTopicTest/Writer.cpp:
          Changed the reinterpret cast required by
          Green Hills compiler to C-style, since the
          Visual Studio compiler didn't like it.

Tue Nov 14 15:36:59 GMT 2006  Rich Seibel<seibel_r@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpSendStrategy.cpp:
          Rearranged includes to correct a dependency which tripped
          up the Green Hills compiler.

        * tests/DCPS/FooTest3/Writer.cpp:
        * tests/DCPS/FooTest3NoKey/Writer.cpp:
        * tests/DCPS/FooTest3_1/Writer.cpp:
        * tests/DCPS/FooTest3_2/Writer.cpp:
        * tests/DCPS/FooTest5/Writer.cpp:
        * tests/DCPS/MultiDPTest/Writer.cpp:
        * tests/DCPS/MultiTopicTest/Writer.cpp:
          Added a cast of thr_self to CORBA::Long to satisfy
          Green Hills compiler.

Mon Nov 13 16:55:56 UTC 2006  Ciju John  <johnc@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
          Add new log messages.

        * dds/DCPS/transport/framework/EntryExit.h:
        * dds/DCPS/transport/framework/TransportDebug.h: